[package]
name = "database"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
primitives.workspace = true
tokio.workspace = true
parking_lot.workspace = true
thiserror.workspace = true
libmdbx = { version = "0.6.1", features = ["orm"] }
serde_json = { version = "1.0.140" }
serde = { version = "1.0.128", features = ["derive"] }
anyhow = "1.0.99"
once_cell = "1.21.3"
dirs = "5"
tracing.workspace = true
tracing-subscriber.workspace = true