[package]
name = "e2e-test"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = "1.0.100"
tokio.workspace = true
primitives.workspace = true
network.workspace = true
node.workspace = true
serde_json.workspace = true
serde.workspace = true
hex.workspace = true
k256 = { version = "0.13.4", features = ["ecdsa", "sha256"]}
sha2 = "0.10.9"
reqwest = { version = "0.13.1", features = ["json"] }
tracing.workspace = true
tracing-subscriber.workspace = true
