[package]
name = "payload"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
primitives.workspace = true
provider.workspace = true
transaction_pool.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

