[package]
name = "primitives"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
alloy-primitives = { version = "1.2.0", features = ["rand"] }
k256 = { version = "0.13.4", features = ["ecdsa", "sha256"]}
serde_json = { version = "1.0.140" }
serde = { version = "1.0.128", features = ["derive"] }
libmdbx = { version = "0.6.1", features = ["orm"] }
anyhow = "1.0.99"
rand = "0.9.1"
sha2 = "0.10.9"
hex = "0.4.3"
colored = "2"
